arkts_static_test/02_LexicalElements/ets_cases/2.7_Keywords/compile-pass/LEX_02_07_086_PASS_SOFT_KW_KEYOF_IDENT.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id LEX_02_07_086_PASS_SOFT_KW_KEYOF_IDENT
 * @expect compile-pass
 * @section 2.7
 * @design 补充测试因子：软关键字 keyof 在普通上下文可作为标识符
 * @note 正向用例：补齐软关键字普通标识符上下文覆盖
 */
function test86(): void {
  let keyof: int = 1
  let result: int = keyof + 1
}
