arkts_static_test/02_LexicalElements/ets_cases/2.7_Keywords/compile-fail/LEX_02_07_070_FAIL_TYPE_KW_NUMBER.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id LEX_02_07_070_FAIL_TYPE_KW_NUMBER
 * @expect compile-fail
 * @section 2.7
 * @design 补充测试因子：类型关键字 number 不能作为标识符
 * @note 反向用例：补齐预定义类型主名/别名关键字保护覆盖
 */
function test70(): void {
  let number: int = 1
}
